sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:13: error: ')' expected but 'else' found.
      else if (plusPetit(i,i+1)) {
      ^